added image controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=techshop
 
 spring.data.mongodb.uri=mongodb://root:1234@localhost:27017/techshop?authSource=admin&tls=false
+
+techshop.path.img=c:/techshop/images
