--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 
 		<dependency>
